# specfall

./: .gitignore  README.md  pyproject.toml
src/specfall/: __init__.py  api.py  cli.py
src/specfall/ms/: reader.py  selection.py
src/specfall/plot/: waterfall.py
src/specfall/utils/: checks.py  logging.py
tests/: test_smoke.py
